# multi_target_tracker

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md
data/: input_data.json
include/: input_output.h  tracking_demo.h
src/: input_output.cpp  main.cpp  tracking_demo.cpp
